# srv_cln_app

./: Makefile.am  build_app.sh  configure.ac
client_src/: client.c  global.h  log.c  log.h  usage.c  usage.h
common_src/: backup_data.h  global.h  log.c  log.h  message.h
server_src/: server.c
