#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([slaxerum], [1.0], [slaxerum@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror -Wno-portability foreign subdir-objects])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_AWK
AM_PROG_CC_C_O
AC_PROG_CPP
#AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PROG_AS
AC_PROG_LIBTOOL
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
